Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ h1 {
     }
 
 section {
-    align-self: center;
+    align-self: flex-start;
     display: flex;
     flex-direction: column;
     max-width: 500px;
